--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
                 <label for="oldnails">The old nails made the wood very difficult to work with.</label>
             </div>
             <div class="image">
+                <img src="/construction.jpg" alt="Construction of the model begins." id="construction"><br>
+                <label for="construction">Construction of the model begins.</label>
+            </div>
+            <div class="image">
                 <img src="/wip.jpg" alt="Work in progress" id="wip"><br>
                 <label for="wip">Work in progress.</label>
             </div>
