--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 wood), had them transported to a saw mill in Skibbereen and milled further into uniform
                 sized lumber, to suit the more advanced construction techniques of the time. Then in
                 1915/16 he had a large bungalow built just outside the town of Skibbereen, using this same
-                wood. Shortly after he sold the bungalow to the Roycroft Family who were Grain Millers at
-                the time. The property remains in the family to this day, but this historic structure has
+                wood. Then in the late 1940s he sold the bungalow to the Roycroft Family who were Grain Merchants and Millers at the time.
+                The property remains in the family to this day, but this historic structure has
                 recently been demolished to make way for the construction of a new family home for the
                 next generation of the Roycroft Family.
             </p>
